# nuro

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/visualize-chat-ui/: SKILL.md
.claude/skills/visualize-chat-ui/scripts/: capture-screenshot.sh  capture.sh  render_ansi_to_png.py
defaults/bootstrap/: neuromancer.toml
defaults/bootstrap/orchestrator/: SYSTEM.md
defaults/templates/agent/: SYSTEM.md
docs/: chat_ui_opencode_notes.md  competitive-research-openclaw-landscape.md  demos-and-workflows-brainstorm.md  initial_sds.md  neuromancer-beta-sds.md  sds_discrepancies.md  self_adaptive_sds.md
docs/openclaw_research/: basic_operation.md
neuromancer-a2a/: Cargo.toml
neuromancer-a2a/src/: handlers.rs  lib.rs  router.rs  state.rs  types.rs
neuromancer-agent/: CLAUDE.md  Cargo.toml
neuromancer-agent/src/: conversation.rs  lib.rs  llm.rs  model_router.rs  runtime.rs  session.rs
neuromancer-agent/src/runtime/: helpers.rs  mod.rs  recovery.rs
neuromancer-cli/: Cargo.toml
neuromancer-cli/src/: chat.rs  cli.rs  daemon.rs  e2e.rs  install.rs  main.rs  output.rs  provider_keys.rs  rpc_client.rs
neuromancer-cli/src/chat/: app.rs  clipboard.rs  composer.rs  demo.rs  events.rs  mod.rs  terminal.rs  timeline.rs
neuromancer-cli/tests/: e2e_cli.rs
neuromancer-core/: Cargo.toml
neuromancer-core/src/: agent.rs  argument_tokens.rs  audit.rs  config.rs  error.rs  lib.rs  memory.rs  policy.rs  proposal.rs  routing.rs  rpc.rs  secrets.rs  security.rs  task.rs  thread.rs  tool.rs  trigger.rs  xdg.rs
neuromancer-mcp/: Cargo.toml
neuromancer-mcp/src/: lib.rs  protocol.rs  server.rs
neuromancer-memory-simple/: Cargo.toml
neuromancer-memory-simple/src/: lib.rs
neuromancer-orchestrator/: Cargo.toml
neuromancer-orchestrator/src/: lib.rs  orchestrator.rs  registry.rs  remediation.rs  router.rs  task_queue.rs
neuromancer-secrets/: Cargo.toml
neuromancer-secrets/src/: crypto.rs  keychain.rs  lib.rs  local.rs  scanner.rs
neuromancer-secrets/src/integrations/: mod.rs  proton_pass.rs
neuromancer-skills/: Cargo.toml
neuromancer-skills/src/: aliases.rs  broker.rs  csv.rs  lib.rs  linter.rs  metadata.rs  path_policy.rs  registry.rs  script_runner.rs
neuromancer-threads/: Cargo.toml
neuromancer-threads/src/: lib.rs  store.rs
neuromancer-triggers/: Cargo.toml
neuromancer-triggers/src/: cron.rs  discord.rs  lib.rs  manager.rs
neuromancerd/: CLAUDE.md  Cargo.toml
neuromancerd/src/: admin.rs  config.rs  main.rs  message_runtime.rs  rpc.rs  shutdown.rs  telemetry.rs
neuromancerd/src/orchestrator/: bootstrap.rs  error.rs  llm_clients.rs  mock_llm.rs  mod.rs  prompt.rs  runtime.rs  runtime_tests.rs  state.rs  tool_id.rs  tools.rs
neuromancerd/src/orchestrator/actions/: adaptive_actions.rs  authenticated_adaptive_actions.rs  dispatch.rs  mod.rs  runtime_actions.rs
neuromancerd/src/orchestrator/adaptation/: analytics.rs  canary.rs  lessons.rs  mod.rs  redteam.rs
neuromancerd/src/orchestrator/collaboration/: mod.rs  remediation.rs
neuromancerd/src/orchestrator/proposals/: apply.rs  lifecycle.rs  mod.rs  model.rs  verification.rs
neuromancerd/src/orchestrator/runtime/: builder.rs  mod.rs  rpc_queries.rs  turn_worker.rs
neuromancerd/src/orchestrator/security/: audit.rs  execution_guard.rs  mod.rs  redacting_memory.rs  redaction.rs  trigger_gate.rs
neuromancerd/src/orchestrator/skills/: aliases.rs  broker.rs  csv.rs  mod.rs  path_policy.rs  script_runner.rs
neuromancerd/src/orchestrator/state/: agent_registry.rs  mod.rs  proposal_store.rs  run_tracker.rs  self_improvement.rs  task_manager.rs  task_store.rs  thread_registry.rs  turn_context.rs
neuromancerd/src/orchestrator/threads/: compaction.rs  mod.rs  store.rs
neuromancerd/src/orchestrator/tracing/: conversation_projection.rs  event_query.rs  jsonl_io.rs  mod.rs  thread_journal.rs
samples/v0_1_alpha/: neuromancer.toml
samples/v0_1_alpha/prompts/agents/planner/: SYSTEM.md
samples/v0_1_alpha/prompts/orchestrator/: SYSTEM.md
