[package]
name = "neuromancer-a2a"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2A HTTP+JSON endpoints, Agent Card serving, task state mapping"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
