[package]
name = "neuromancer-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent execution runtime: state machine, rig Agent construction, conversation context"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
