[package]
name = "neuromancer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neuromancer control CLI over daemon JSON-RPC"

[[bin]]
name = "neuroctl"
path = "src/main.rs"

[dependencies]
neuromancer-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
humantime = { workspace = true }
toml = { workspace = true }
console = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
