[package]
name = "neuromancer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, error types, and shared types for Neuromancer"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
