[package]
name = "neuromancer-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP client pool: server lifecycle, health checks, tool registry"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
