[package]
name = "neuromancer-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestrator: routing rules, LLM classifier fallback, task queue, supervision, remediation"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rig-core = { workspace = true }
