[package]
name = "neuromancer-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secrets broker: encrypted store, ACL enforcement, handle resolution"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
