[package]
name = "neuromancer-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill loading, frontmatter parsing, permission extraction, linting"

[dependencies]
neuromancer-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
gray_matter = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
