[package]
name = "neuromancer-threads"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed ThreadStore implementation and compaction"

[dependencies]
neuromancer-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
