[package]
name = "neuromancerd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neuromancer daemon binary: config, lifecycle, admin API"

[dependencies]
neuromancer-core = { workspace = true }
neuromancer-orchestrator = { workspace = true }
neuromancer-agent = { workspace = true }
neuromancer-a2a = { workspace = true }
neuromancer-mcp = { workspace = true }
neuromancer-skills = { workspace = true }
neuromancer-triggers = { workspace = true }
neuromancer-memory-simple = { workspace = true }
neuromancer-secrets = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
